@@ -7,6 +7,9 @@ Notes on upgrading from an older release
 
 o Upgrading from a version prior to <release>:
 
+    - loadMACintoDB.pl removed
+    Dropping loadMACintoDB.pl. Replaced by node import feature.
+     
     - Captive Portal changes
     By default pf::web is no longer exporting it's subroutines. This means that
     all the captive portal scripts in cgi-bin/ will need to be updated to use 
