@@ -1,3 +1,8 @@
+2010-11-19	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/addons/loadMACintoDB.pl, pf/UPGRADE: Dropping loadMACintoDB.pl
+	script in favor of new node import facility available on CLI or web
+	admin.
+
 2010-11-17	Olivier Bilodeau <obilodeau@inverse.ca>
 	* pf/t/util.t, pf/lib/pf/import.pm, pf/lib/pf/util.pm, pf/t/all.t,
 	pf/t/smoke.t: Fixed a very long standing issue: valid_mac and
